Documentation de l'API Swagger Part user et event
