# domain/Events/src/UseCase/SearchEvent.php
@@ -9,8 +9,10 @@ use Domain\Events\Port\IEventsRepository;
 
 use function Assert\lazy;
 use OpenApi\Annotations as OA;
+/**
+ * @OA\Info(title="E-Ticket API", version="1.0")
+ */
 
-//use Domain\Users\Tests\Adapters\InMemoryUsersRepository;
 
 class SearchEvent{
 
@@ -20,9 +22,33 @@ class SearchEvent{
   {
      $this->eventRepository = $repository;
   }
+  /*- in: query
+  name: offset
+  schema:
+    type: integer
+    default: 0
+  description: The number of items to skip before starting to collect the result set
+- in: query
+  name: limit
+  schema:
+    type: integer
+    default: 100
+  description: The numbers of items to return
+  */
 /**
  * @OA\GET(
- *     path="/CreateEvent/{ville}/{edate}",
+ *     path="/infrastructures/Api/Events/searchEvent.php?ville={ville}&date={edate}",
+ *    tags={"Evenements"},
+ *     summary="La création d'un évènement",
+ *   @OA\Parameter(
+ *       name="ville",
+ *       description="La ville qui abrite l'évènement",
+ *       required=true,
+ *       in="query",
+ *       @OA\Schema(
+ *         type="string"
+ *      )
+ *    ),
  *   @OA\Response(
  *          response="200",
  *        description="Recherche d'un évèvement a partir de la ville et la date",
